# cnctd_midi

./: CLAUDE.md  Cargo.toml  README.md
src/: lib.rs  midi_message.rs
